# athe-web

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  NFS.md  OAUTH_SETUP.md  README.md  audit.sh  conftest.py  gunicorn.sh  manage.py  parse_catalog_bs4.py  pre-push.sh  prek.toml  pyproject.toml  pytest.ini  run-discord-house.sh  run-discord-remind.sh  run-discord.sh  sync-static.sh
.github/workflows/: ci.yml
atheweb/: account_adapter.py  asgi.py  settings.py  tests.py  urls.py  validators.py  wsgi.py
atheweb/static/css/: athemath.css  style.css
atheweb/templates/: base.html  layout.html
atheweb/templates/account/: signup_closed.html
atheweb/templates/admin/: base_site.html
atheweb/templates/socialaccount/: base_entrance.html  base_manage.html
courses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
courses/management/commands/: generate_student_fixtures.py  send_discord_reminders.py
courses/migrations/: 0001_initial.py  0002_course_difficulty_course_instructor_and_more.py  0003_alter_semester_end_date_alter_semester_start_date.py  0004_alter_semester_options.py  0005_alter_course_options.py  0006_course_discord_role_id_course_discord_webhook_and_more.py  0007_alter_course_instructor.py  0008_course_is_club.py  0009_alter_coursemeeting_title.py  0010_alter_course_options.py  0011_course_discord_reminders_enabled.py  0012_course_leaders.py  0012_semester_house_points_freeze_date_student_house.py  0013_merge_20251119_2128.py  0014_remove_student_enrolled_courses_course_students.py  0015_remove_course_google_classroom_join_link.py  0016_semester_visible.py  0017_alter_student_options_alter_student_unique_together_and_more.py  0018_alter_course_discord_reminders_enabled.py  0019_alter_student_house.py  0020_add_house_points_class_threshold.py  0021_alter_student_house.py  0022_add_global_event.py  0023_add_calendar_token.py
courses/static/css/: courses.css
courses/templates/courses/: bulk_create_students.html  calendar.html  course_detail.html  course_list.html  course_update.html  global_event_detail.html  manage_meetings.html  meeting_confirm_delete.html  meeting_form.html  my_clubs.html  my_courses.html  past_clubs.html  semester_list.html  sorting_hat.html  staff_schedule.html  upcoming.html
courses/tests/: test_auto_add_leader.py  test_club_join_drop.py  test_discord_reminders.py  test_global_events.py  test_models.py  test_past_clubs.py  test_query_optimization.py  test_semester_visibility.py  test_sorting_hat.py  test_staff_schedule.py  test_views.py
fixtures/: catalog-1.html  catalog-2.html  catalog-3.html  catalog-4.html  catalog-5.html  catalog-6.html  catalog-7.html  course-snapshot-fa25.json  courses.json  example.json  fall-21.html  history-snapshot-fa25.json  psets-snapshot-fa25.json  spring-21.html  spring-22.html  staff-snapshot-fa25.json  staff.json
home/: admin.py  models.py  tests.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_alter_staffphotolisting_ordering_and_more.py  0003_staffphotolisting_slug.py  0004_alter_staffphotolisting_category.py  0005_rename_staff_categories.py  0006_alter_staffphotolisting_options_and_more.py  0007_applypset.py  0008_alter_applypset_file.py  0009_alter_applypset_name.py  0010_alter_applypset_closed_message_and_more.py  0011_alter_staffphotolisting_user.py  0012_add_staff_social_fields.py  0013_alter_applypset_deadline.py
home/static/css/: athemath.css  bootstrap-theme.css  dates.css  donors.css  homepage.css  staffdetail.css  stafflist.css
home/static/js/: local_datetime.js  stafflist.js
home/templates/home/: about.html  apply.html  base.html  donors.html  history.html  index.html  legal.html  manual.html  past_psets.html  past_staff.html  profile_settings.html  scholarships.html  staff.html  staff_detail.html  staff_edit.html  virtual_program.html
home/templates/registration/: login.html
home/templates/socialaccount/: authentication_error.html  base_entrance.html  base_manage.html  connections.html  login.html  login_cancelled.html  signup.html
home/templatetags/: local_time.py
home/tests/: test_apply_pset.py  test_local_time.py  test_manual.py  test_staff_photo.py
housepoints/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
housepoints/management/commands/: import_housepoints.py  send_discord_house_updates.py
housepoints/migrations/: 0001_initial.py  0002_award_unique_intro_post_per_student.py  0003_merge_potd_award_types.py  0004_alter_award_house.py  0005_alter_award_house.py
housepoints/templates/housepoints/: attendance_bulk.html  bulk_award.html  leaderboard.html  (+4 more)
housepoints/tests/: test_attendance.py  test_bulk_award.py  test_discord_house_updates.py  test_house_view.py  test_import.py  test_leaderboard.py  test_models.py  test_my_awards.py  test_nav.py
misc/: tests.py  urls.py
reg/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reg/migrations/: 0001_initial.py  0002_studentinvitelink.py
reg/tests/: test_admin.py  test_staff_invite_model.py  test_staff_invite_views.py  test_student_invite_model.py  test_student_invite_views.py
ta_attendance/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
ta_attendance/migrations/: 0001_initial.py  0002_attendance_timestamp.py
ta_attendance/tests/: test_all_attendance.py  test_models.py  test_my_attendance.py  test_navigation.py
weblog/: admin.py  markdown_extensions.py  math_extension.py  models.py  urls.py  views.py
weblog/migrations/: 0001_initial.py  0002_photo.py  0003_add_blogpost.py
weblog/tests/: test_blogpost_models.py  test_blogpost_views.py  test_history_views.py  test_markdown_extensions.py  test_models.py
yearbook/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
yearbook/migrations/: 0001_initial.py  0002_alter_yearbookentry_bio_and_more.py  0003_alter_yearbookentry_bio.py  0004_increase_bio_max_length.py
yearbook/tests/: test_bio_validation.py  test_create_view.py  test_detail_view.py  test_index_view.py  test_list_view.py  test_models.py  test_semester_list.py  test_update_view.py
(+41 files in other folders)
