[project]
name = "atheweb"
version = "0.1.0"
description = "TBD"
requires-python = ">=3.11"
authors = [
    { name = "Evan Chen", email = "evan@evanchen.cc" },
    { name = "Violet Xu", email = "violet@vbnm.dev"},
    { name = "Greta Qu", email = "greta.qu@athemath.org" },
    { name = "Ritwin Narra", email = "ritwin@stanford.edu" },
    { name = "Vera Puah", email = "v4nillacl0uds@gmail.com" }
]
dependencies = [
    "django>=5.2.13,<6.0",
    "django-allauth[socialaccount]>=65.16.1,<66.0",
    "django-bootstrap5>=24.3,<25.0",
    "django-extensions>=3.2.3,<3.3",
    "django-hijack>=3.7.7",
    "django-markdownfield>=0.20.0",
    "dotenv>=0.9.9",
    "ipython",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "django-discordo>=1.0.0",
    "icalendar>=6.3.2,<7.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=25.3.0",
    "mysqlclient>=2.2.8",
]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "django-stubs-ext>=5.2.9,<6.0",
    "django-stubs>=5.2.9,<6.0",
    "djlint>=1.36.4",
    "prek>=0.3.9",
    "pyright>=1.1.408",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "werkzeug>=3.1.8",
]

[tool.djlint]
profile = "django"
ignore = "H006,H021,H023,H030,H031"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "atheweb.settings"
python_files = ["test_*.py", "tests.py"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["**/migrations/*.py", "manage.py"]

[tool.ruff.lint.extend-per-file-ignores]
"atheweb/settings.py" = ["S105"]
"**/tests.py" = ["S101"]
"**/test_*.py" = ["S101"]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = ["**/node_modules", "**/typings", "**/__pycache__", ".git", "venv", ".venv", "**/migrations", "**/test_*.py", "**/tests.py", "**/apps.py"]
pythonPlatform = "Linux"
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

reportAssertAlwaysTrue = "error"
reportCallInDefaultInitializer = "warning"
reportConstantRedefinition = "none"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "warning"
reportTypedDictNotRequiredAccess = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "error"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedFunction = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = false
strictListInference = false
strictParameterNoneValue = false
strictSetInference = false

[tool.codespell]
skip = "*/migrations/*.py,uv.lock,fixtures/staff-snapshot-fa25.json,fixtures/course-snapshot-fa25.json"
ignore-words-list = "Oly"
